--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,21 @@
 /*Write you styles here*/
+
+/* Top */
+
+/* .top-title {
+    font-family: 'Poppins';
+    font-weight: bold;
+    letter-spacing: 0;
+    color: white;
+}  */
+
+.top-video {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    min-width: 100%;
+    min-height: 100vh;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
