--- a/assets/css/diya.css
+++ b/assets/css/diya.css
@@ -69,7 +69,7 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 body {
-    font: 400 14px 'Poppins', sans-serif;
+    font: 400 14px sans-serif;
     color: #333;
     overflow-x: hidden;
 }
@@ -127,13 +127,14 @@ a:active {
 p {
     color: #6e7373;
     font-weight: 300;
-    font-family: 'Poppins', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
     letter-spacing: 2px;
     color: #333;
     font-weight: 700;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
@@ -183,7 +184,7 @@ b, strong {
 }
 
 a {
-    font-family: 'Poppins', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* ---------------------------------------------- 
@@ -537,7 +538,7 @@ a {
 .section-home {
     height: 100vh;
     position: relative;
-    background-image: url("../images/banner.jpg");
+    /* background-image: url("../images/banner.jpg"); */
     background-size: cover;
     background-position: center;
 }
@@ -547,7 +548,6 @@ a {
     height: 100%;
     flex-wrap: wrap;
     z-index: 3;
-    text-align: center;
     color: #fff;
 }
 
@@ -559,7 +559,7 @@ a {
     display: block;
     font-size: 9vh;
     color: #fff;
-    font-weight: 300;
+    font-weight: bold;
 }
 
 .overlay span.hello {
@@ -1069,7 +1069,7 @@ li.active:after {
 }
 
 .services-list-1 {
-    background-image: url("../images/services1.jpg");
+    background-image: url("../images/hearing.jpg");
 }
 
 .services-list-2 {
