--- a/assets/css/diya.css
+++ b/assets/css/diya.css
@@ -215,9 +215,9 @@ a {
     box-shadow: none;
     text-transform: uppercase;
     outline: none !important;
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
     box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.2);
     border-radius: 3px;
     min-width: 140px;
@@ -293,9 +293,9 @@ a {
     width: 50px;
     content: "";
     bottom: -30px;
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
     margin: 0 auto;
     box-shadow: 0px 10px 24px rgba(0,0,0,0.3);
 }
@@ -334,16 +334,16 @@ a {
 
 .badge {
     font-family: 'Poppins', sans-serif;
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
     color: #fff;
 }
 
 .badge-dark {
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
 }
 
 
@@ -504,9 +504,9 @@ a {
     -ms-transition: all 0.3s ease-in-out 0s;
     -o-transition: all 0.3s ease-in-out 0s;
     transition: all 0.3s ease-in-out 0s;
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
     margin: 0 auto;
     box-shadow: 0px 10px 24px rgba(0,0,0,0.3);
 }
@@ -518,7 +518,7 @@ a {
 
 .navbar-nav .nav-link.active {
     opacity: 1;
-    color: #f47a65 !important;
+    color: #09265e !important;
 }
 
 .nav-wrapper {
@@ -576,7 +576,7 @@ span.typed {
 }
 
 .typed-cursor {
-    color: #f47a65;
+    color: #09265e;
 }
 
 .section-home:after {
@@ -701,14 +701,14 @@ span.typed {
     margin: 0 auto;
 }
 
-.section-about--img:after {content: "";position: absolute;height: 150px;width: 120px;border: 3px solid #f47a65;border-radius: 6px;bottom: -30px;left: -30px;z-index: -1;}
+.section-about--img:after {content: "";position: absolute;height: 150px;width: 120px;border: 3px solid #09265e;border-radius: 6px;bottom: -30px;left: -30px;z-index: -1;}
 
 .section-about--img:before {
     content: "";
     height: 200px;
     width: 200px;
     display: block;
-    background-color: #f47a65;
+    background-color: #09265e;
     border-radius: 3px;
     position: absolute;
     right: -30px;
@@ -828,7 +828,7 @@ span.typed {
 }
 
 .filter li.active {
-    color: #f47a65 !important;
+    color: #09265e !important;
 }
 
 li.active:after {
@@ -847,9 +847,9 @@ li.active:after {
     -ms-transition: all 0.3s ease-in-out 0s;
     -o-transition: all 0.3s ease-in-out 0s;
     transition: all 0.3s ease-in-out 0s;
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
     margin: 0 auto;
     box-shadow: 0px 10px 24px rgba(0,0,0,0.3);
 }
@@ -1034,9 +1034,9 @@ li.active:after {
          -o-transform: rotate3d(0, 1, 0, 180deg);
             transform: rotate3d(0, 1, 0, 180deg);
     z-index: 1;
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
     -webkit-transform-style: inherit;
     -moz-transform-style: inherit;
     -ms-transform-style: inherit;
@@ -1137,9 +1137,9 @@ li.active:after {
 }
 
 .progress-bar {
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
     opacity: 0.8;
 }
 
@@ -1341,9 +1341,9 @@ li.active:after {
 }
 
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill {
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
 }
 
 .section-blog {
@@ -1379,7 +1379,7 @@ li.active:after {
 }
 
 .blogFilter li.active {
-    color: #ff4f64;
+    color: #09265e;
 }
 
 .blog-cat {
@@ -1413,10 +1413,10 @@ h4.media-heading {
 .blog-detail-content blockquote {
     font-size: 14px;
     background: #f9f9f9;
-    border-color: #fd735a;
+    border-color: #09265e;
     padding: 5px 10px;
     border-radius: 4px;
-    border-left: 5px solid #fd735a;
+    border-left: 5px solid #09265e;
 }
 .blog-detail-content img {
     width: 100%;
@@ -1448,7 +1448,7 @@ h4.media-heading {
     padding: 3px 15px;
     color: #fff;
     text-transform: capitalize;
-    background: #fd735a;
+    background: #09265e;
     border-radius: 2px;
     margin: 15px 0;
 }
@@ -1475,7 +1475,7 @@ h4.media-heading {
     font-size: 14px;
 }
 .tags:hover {
-    background-color: #fd735a;
+    background-color: #09265e;
     color: #fff;
 }
 .blog-detail-sib {
@@ -1503,7 +1503,7 @@ h4.media-heading {
     margin-bottom: 15px;
 }
 .blog-nav:hover {
-    background: #fd735a;
+    background: #09265e;
     color: #fff;
 }
 .blog-nav:hover p,
@@ -1571,9 +1571,9 @@ h4.media-heading {
     margin: 0 auto;
     top: -35px;
     position: absolute;
-    background: #f47a65;
-    background: -webkit-linear-gradient(to bottom left, #ff4f64, #f47a65);
-    background: linear-gradient(to bottom left, #f47a65, #ff4f64);
+    background: #09265e;
+    background: -webkit-linear-gradient(to bottom left, #09265e, #09265e);
+    background: linear-gradient(to bottom left, #09265e, #09265e);
     margin: 0 auto;
 }
 
@@ -1613,7 +1613,7 @@ h4.media-heading {
 }
 
 .scroll-up a {
-    background-color: #f47a65;
+    background-color: #09265e;
     display: block;
     width: 45px;
     height: 45px;
@@ -1628,7 +1628,7 @@ h4.media-heading {
 
 .scroll-up a:hover,
 .scroll-up a:active {
-    background-color: #f47a65;
+    background-color: #09265e;
     color: #fff;
 }
 
