modify video layout

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,10 +11,14 @@
 
 .top-video {
     position: absolute;
+    position: fixed;
+    right: 0;
     left: 50%;
     top: 50%;
     min-width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
+    width: auto;
+    height: auto;
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
