--- a/assets/css/diya.css
+++ b/assets/css/diya.css
@@ -537,7 +537,7 @@ a {
 /* ---------------------------------------------- */
 
 .section-home {
-    margin-top: 62px;
+    padding-top: 62px;
     height: 100vh;
     position: relative;
     /* background-image: url("../images/banner.jpg");
@@ -547,7 +547,7 @@ a {
 
 @media only screen and (max-width:990px) {
     .section-home {
-        margin-top: 90px;
+        padding-top: 90px;
         height: 70vh;
     }
 }
